logs/dag_id=train_model_v4/run_id=scheduled__2024-04-28T000000+0000/task_id=train/attempt=1.log
[2024-04-29T18:52:45.652+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-04-29T18:52:45.679+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: train_model_v4.train scheduled__2024-04-28T00:00:00+00:00 [queued]>
[2024-04-29T18:52:45.687+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: train_model_v4.train scheduled__2024-04-28T00:00:00+00:00 [queued]>
[2024-04-29T18:52:45.688+0000] {taskinstance.py:2303} INFO - Starting attempt 1 of 6
[2024-04-29T18:52:45.699+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): train> on 2024-04-28 00:00:00+00:00
[2024-04-29T18:52:45.714+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'train_model_v4', 'train', 'scheduled__2024-04-28T00:00:00+00:00', '--job-id', '10', '--raw', '--subdir', 'DAGS_FOLDER/dag_train.py', '--cfg-path', '/tmp/tmpmx_y9ix2']
[2024-04-29T18:52:45.720+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=971) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-04-29T18:52:45.721+0000] {standard_task_runner.py:91} INFO - Job 10: Subtask train
[2024-04-29T18:52:45.721+0000] {standard_task_runner.py:63} INFO - Started process 988 to run task
[2024-04-29T18:52:45.773+0000] {task_command.py:426} INFO - Running <TaskInstance: train_model_v4.train scheduled__2024-04-28T00:00:00+00:00 [running]> on host d1f0cdf1c56a
[2024-04-29T18:52:45.869+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='mosula' AIRFLOW_CTX_DAG_ID='train_model_v4' AIRFLOW_CTX_TASK_ID='train' AIRFLOW_CTX_EXECUTION_DATE='2024-04-28T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-04-28T00:00:00+00:00'
[2024-04-29T18:52:45.871+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-04-29T18:52:45.915+0000] {logging_mixin.py:188} WARNING - /opt/***/dags/dag_train.py:46 UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.
[2024-04-29T18:52:46.383+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-04-29T18:52:46.384+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/dag_train.py", line 77, in train_model
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "_04_2024_18_52_46"
LINE 3:         VALUES (29_04_2024_18_52_46, {'objective': 'binary',...
                          ^

[2024-04-29T18:52:46.399+0000] {taskinstance.py:1205} INFO - Marking task as UP_FOR_RETRY. dag_id=train_model_v4, task_id=train, execution_date=20240428T000000, start_date=20240429T185245, end_date=20240429T185246
[2024-04-29T18:52:46.411+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 10 for task train (syntax error at or near "_04_2024_18_52_46"
LINE 3:         VALUES (29_04_2024_18_52_46, {'objective': 'binary',...
                          ^
; 988)
[2024-04-29T18:52:46.420+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-04-29T18:52:46.432+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-04-29T18:52:46.434+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
